# kindle-substrate

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh
.github/workflows/: build.yml
analysis/: 5.18.1.1.1-kpp-home-hook.md  symbols.5.18.1.1.1-kpp-home.yaml
analysis/notes/: 01-pull.md
apps/com.bd452.ksubstrate/: README.md  build.sh
apps/com.bd452.ksubstrate/package/: app.sh  (+4 more)
apps/com.bd452.ksubstratedemo/: README.md  build.sh
docs/: architecture-strategy.md  build-and-publish.md  ephemeral-runtime-reframe-plan.md  explicit-target-controller-plan.md  kindle-substrate-divergence.md  kindle-substrate.md  project-context.md
rust/: Cargo.toml
rust/dobby-sys/: build.rs
rust/ksub/src/: main.rs
rust/ksubstrate-bootstrap/: Cargo.toml
rust/ksubstrate-bootstrap/src/: lib.rs
rust/ksubstrate-cli/: Cargo.toml
rust/ksubstrate-cli/src/: main.rs
rust/ksubstrate-demo-target/: Cargo.toml  build.rs
rust/ksubstrate-demo-target/src/: main.rs
rust/ksubstrate-homeapps/: Cargo.toml
rust/ksubstrate-homeapps/src/: lib.rs
rust/ksubstrate-probe-tweak/: manifest.json
rust/ksubstrate-probe-tweak/src/: lib.rs
rust/ksubstrate-sample-tweak/src/: lib.rs
rust/ksubstrate-targets/: Cargo.toml
rust/ksubstrate-targets/src/: lib.rs
rust/ksubstrate/include/: ksubstrate.h
rust/ksubstrate/src/: backend.rs  chain.rs  lib.rs  plt.rs  thunk.rs
rust/ksubstrated/: Cargo.toml
rust/ksubstrated/src/: control.rs  framework.rs  journal.rs  layout.rs  main.rs  mounts.rs  session.rs  tweaks.rs
scripts/: build-in-container.sh  build-packages.sh  check-mount-guardrails.sh  generate-release-metadata.sh  koxtoolchain.sh  pack-app.sh  setup-koxtoolchain.sh  test-mount-session.sh
(+9 files in other folders)
